src/test/ui/did_you_mean/issue-21659-show-relevant-trait-impls-1.stderr
error[E0277]: the trait bound `Bar: Foo<usize>` is not satisfied
  --> $DIR/issue-21659-show-relevant-trait-impls-1.rs:24:8
   |
LL |     f1.foo(1usize);
   |        ^^^ the trait `Foo<usize>` is not implemented for `Bar`
   |
   = help: the following implementations were found:
             <Bar as Foo<i32>>
             <Bar as Foo<u8>>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
